# skinny_vision

./: CMakeLists.txt  README.md  package.xml
include/skinny_vision/: ContainerStorage.hpp  ImageContainer.hpp  ImageConversion.hpp  cuda_helpers.hpp
include/skinny_vision/decoder/: JpegDecoder.hpp  NvJpegDecoder.hpp  OpenCvDecoder.hpp
include/skinny_vision/encoder/: JpegEncoder.hpp  JpegEncoderSettings.hpp  NvJpegEncoder.hpp  OpenCvEncoder.hpp
src/: ImageContainer.cpp  ImageConversion.cpp  RepublisherNode.cpp
src/decoder/: NvJpegDecoder.cpp  OpenCvDecoder.cpp
src/encoder/: NvJpegEncoder.cpp  OpenCvEncoder.cpp
test/: encoder_tests.cpp
test/resources/: test_200x300.tiff
